# linrad_extio_SoapySDR

./: .gitmodules  CMakeLists.txt  README.md
soapysettings/: sapysettings.py
src/: CMakeLists.txt  ExtIO_linrad-soapy.cpp  ExtIO_linrad-soapy.h
